@@ -1,12 +1,0 @@
-GNOME is the GNU Network Object Model Environment.
-
-The GNOME project intends to build a complete, easy-to-use desktop
-environment for the user, and a powerful application framework for
-the software developer.
-
-This is a meta package for the second major version of the GNOME
-project.  It provides all the basic components required to get a
-working desktop plus several programs that are related to it in
-some way.  These include programs that use the GNOME development
-platform or progarms that provide some important and useful
-features, which make the desktop more complete.
